unpackaged/main/default/objects/Informacion_de_Transferencia__c/Informacion_de_Transferencia__c.object-meta.xml
<CustomObject>
    <description>Sirve para guardar los IDs de las ordenes que serán transferidas a un contacto ANS.</description>
    <label>Informacion de Transferencia</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Nombre de Informacion de Transferencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informacion de Transferencias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>