unpackaged/main/default/objects/Informacion_de_Transferencia__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Guarda el codigo aleatorio unico que identifica la transferencia.</description>
    <label>Codigo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>