unpackaged/main/default/objects/Informacion_de_Transferencia__c/fields/Codigo_De_Transferencia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_De_Transferencia__c</fullName>
    <description>Guarda el codigio que se utiliza para transferir los records de Ordenes.</description>
    <label>Codigo De Transferencia</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>