unpackaged/main/default/objects/Informacion_de_Transferencia__c/fields/Identificadores_de_Ordenes__c.field-meta.xml
<CustomField>
    <fullName>Identificadores_de_Ordenes__c</fullName>
    <description>Guarda los ID&#39;s de las ordenes que van a ser transferidas.</description>
    <label>Identificadores de Ordenes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>